# redditv2

./: .dockerignore  .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  top_posts_24h.csv
static/: index.html
